--- a/Dairy_Care_System/templates/about.html
+++ b/Dairy_Care_System/templates/about.html
@@ -38,7 +38,7 @@
 </ul>
 
 <div class="container">
-    <h1><u>About Dairy Care System</u></h1>
+    <h1><u><strong>Dairy Care System</strong></u></h1>
     <p>
         Welcome to Dairy Care System, a specialized platform designed to streamline the management of dairy farms and enhance the shopping experience for customers. Our private system is dedicated to providing an efficient and secure environment where farm activities and customer transactions are seamlessly integrated.
     </p>
