--- a/Dairy_Care_System/templates/contactus.html
+++ b/Dairy_Care_System/templates/contactus.html
@@ -43,8 +43,8 @@
             We'd love to hear from you! Whether you have a question, feedback, or need support with our Dairy Care System, our team is here to help. Please find our contact information below, and feel free to reach out to us.
         </p>
         <div class="contact-info">
-            <div><strong>Name:</strong> Krishnendu</div>
-            <div><strong>Email:</strong> krishnendulal113@gmail.com</div>
+            <div><strong>Name:</strong> Admin</div>
+            <div><strong>Email:</strong> Admin11@gmail.com</div>
             <div><strong>Phone Number:</strong> 6282752569</div>
             <div><strong>Pincode:</strong> 686505</div>
             <div><strong>District:</strong> Kottayam</div>
