--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -24,7 +24,7 @@
                 <li><b><a href="{% url 'custproductslist' %}">Products list</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'home' %}">Your Orders</a></b></li>
+                <li><b><a href="#">Your Orders</a></b></li>
             </div>
             <div class="nav-item">
                 <li><b><a href="{% url 'feedbackpage' %}">Your Feedback</a></b></li>
