--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -25,7 +25,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 5px;
-            font-family: 'Comic Sans MS', cursive;
+            font-family: 'Arial', sans-serif;
         }
     
         .nav-item.left {
@@ -161,7 +161,7 @@
             <li><b><a href="{% url 'addproducts' %}">Add Products</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'editproduct' %}">Update Products</a></b></li>
+            <li><b><a href="{% url 'editproduct' %}">Actions on Products</a></b></li>
         </div>
         <div class="nav-item">
             <li>
