--- a/Dairy_Care_System/dairy/static/css/about.css
+++ b/Dairy_Care_System/dairy/static/css/about.css
@@ -41,8 +41,8 @@ ul {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 3px;
-    font-family: 'Comic Sans MS', cursive;
+    padding: 4px;
+    font-family: 'Arial', sans-serif;
 }
 
 /* Navigation item style */
@@ -77,8 +77,8 @@ ul {
 
 /* Header (h1) style */
 h1 {
-    font-family: 'Comic Sans MS', cursive;
-    font-size: 30px;
+    font-family: Copperplate, Papyrus, fantasy;
+    font-size: 40px;
     text-align: center;
     margin-bottom: 20px;
 }
