--- a/Dairy_Care_System/dairy/static/css/adminpage.css
+++ b/Dairy_Care_System/dairy/static/css/adminpage.css
@@ -15,7 +15,7 @@ ul {
     align-items: center;
     margin: 0 5px;
     padding: 5px 10px;
-    font-family: 'Comic Sans MS', cursive;
+    font-family: 'Arial', sans-serif;
 }
 
 .nav-item.left {
