--- a/Dairy_Care_System/dairy/static/css/contactus.css
+++ b/Dairy_Care_System/dairy/static/css/contactus.css
@@ -38,15 +38,15 @@ li a:hover {
 h1 {
     text-align: center;
     color: black;
-    font-size: 28px;
+    font-size: 40px;
     margin-bottom: 20px;
-    font-family: 'Comic Sans MS', cursive;
+    font-family: Copperplate, Papyrus, fantasy;
 }
 
 p.description {
     text-align: center;
     font-size: 16px;
-    color: gray;
+    color: rgb(131, 72, 27);
     margin-bottom: 30px;
 }
 
@@ -65,7 +65,7 @@ p.description {
     justify-content: flex-end;
     align-items: center;
     padding: 3px;
-    font-family: 'Comic Sans MS', cursive;
+    font-family: 'Arial', sans-serif;
 }
 
 .nav-item {
