--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -32,13 +32,13 @@
             <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'home' %}">Animals list</a></b></li>
+            <li><b><a href="#">Animals list</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'home' %}">Milk details</a></b></li>
+            <li><b><a href="#">Milk details</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'reguserlist' 'all' %}">Feedback Review</a></b></li>
+            <li><b><a href="#">Feedback Review</a></b></li>
         </div>
         <div class="nav-item">
             <li>
