--- a/Dairy_Care_System/templates/custproductslist.html
+++ b/Dairy_Care_System/templates/custproductslist.html
@@ -19,7 +19,7 @@
             <li><b><a href="{% url 'custproductslist' %}">Products list</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'customerpage' %}">Your Orders</a></b></li>
+            <li><b><a href="#">Your Orders</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="{% url 'feedbackpage' %}">Feedback</a></b></li>
