--- a/Dairy_Care_System/dairy/static/css/login.css
+++ b/Dairy_Care_System/dairy/static/css/login.css
@@ -16,7 +16,7 @@
 }
 
 h2 {
-    font-family: 'Comic Sans MS', cursive;
+    font-family: Copperplate, Papyrus, fantasy;
     font-size: 36px;
     margin-bottom: 30px;
 }
