--- a/Dairy_Care_System/templates/login.html
+++ b/Dairy_Care_System/templates/login.html
@@ -20,7 +20,7 @@
     </a>
     <div class="container">
         <div class="login-box">
-            <h2>LOG IN</h2><br>
+            <h2><b>LOG IN</b></h2><br>
             <form id="loginForm" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
