--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -5,6 +5,7 @@
     <title>Products Page</title>
     <style>
         body {
+            background: url('{% static "images/prolist.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
         }
@@ -127,7 +128,7 @@
     
         .product img {
             width: 100%; /* Full width of the product container */
-            height: 150px; /* Fixed height for uniformity */
+            height: 250px; /* Fixed height for uniformity */
             object-fit: cover; /* Maintain aspect ratio and cover the area */
             border-radius: 4px; /* Rounded corners for the image */
         }
@@ -149,6 +150,64 @@
             margin-top: auto; /* Push the footer (like the added at date) to the bottom */
             color: #888;
             font-size: 0.85em;
+        }
+
+        .update-button {
+            padding: 12px 24px;
+            font-size: 18px;
+            background-color: rgb(215, 194, 6);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transition */
+            text-decoration: none;
+            text-align: center;
+            display: inline-block;
+        }
+
+        .update-button:hover {
+            background-color: rgb(126, 116, 21);
+            transform: scale(1.05); /* Slightly enlarge button on hover */
+        }
+
+        .delete-button {
+            padding: 12px 24px;
+            font-size: 18px;
+            background-color: red;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transition */
+            text-decoration: none;
+            text-align: center;
+            display: inline-block;
+        }
+
+        .delete-button:hover {
+            background-color: darkred;
+            transform: scale(1.05); /* Slightly enlarge button on hover */
+        }
+
+
+        .restore-button {
+            padding: 12px 24px;
+            font-size: 18px;
+            background-color: green;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transition */
+            text-decoration: none;
+            text-align: center;
+            display: inline-block;
+        }
+
+        .restore-button:hover {
+            background-color: darkgreen;
+            transform: scale(1.05); /* Slightly enlarge button on hover */
         }
     
     </style>
@@ -185,6 +244,7 @@
             <p>{{ product.product_description }}</p><br>
             <p><strong>Quantity:</strong> {{ product.product_quantity }} {{ product.quantity_unit }}</p>
             <p><strong>Status:</strong> {{ product.status|yesno:"Available,Not Available" }}</p>
+            <p><strong>Added by:</strong> {{ product.employee.username }}</p>
             <p><strong>Added at:</strong> {{ product.added_at }}</p>
         </div>
     {% empty %}
