--- a/Dairy_Care_System/templates/registration.html
+++ b/Dairy_Care_System/templates/registration.html
@@ -116,7 +116,7 @@
     </a>
     <div class="container">
         <div class="login-box">
-            <h2>Register</h2>
+            <h2><b>Register</b></h2>
             <form id="registrationForm" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
