--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -243,6 +243,7 @@
             <h3>{{ product.product_name }}</h3>
             <p>{{ product.product_description }}</p><br>
             <p><strong>Quantity:</strong> {{ product.product_quantity }} {{ product.quantity_unit }}</p>
+            <p><strong>Price:</strong> Rs. {{ product.product_price }}</p>
             <p><strong>Status:</strong> {{ product.status|yesno:"Available,Not Available" }}</p>
             <p><strong>Added by:</strong> {{ product.employee.username }}</p>
             <p><strong>Added at:</strong> {{ product.added_at }}</p>
