--- a/Dairy_Care_System/templates/addemployee.html
+++ b/Dairy_Care_System/templates/addemployee.html
@@ -109,8 +109,8 @@
                 
                 <!-- Username Field -->
                 <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" placeholder="Enter your username">
+                    <label for="username">Name:</label>
+                    <input type="text" id="username" name="username" placeholder="Enter your name">
                     <div id="usernameError" class="error-message"></div>
                 </div>
                 
