--- a/Dairy_Care_System/templates/home.html
+++ b/Dairy_Care_System/templates/home.html
@@ -38,7 +38,11 @@
 <center>
     <h1><b>Dairy Care System</b></h1>
     <h2><b>In every drop of milk, a promise of care; where technology and tradition blend, beyond compare.</b></h2>
-</center>
+</center><br>
+
+<footer>
+    <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
