--- a/Dairy_Care_System/templates/login.html
+++ b/Dairy_Care_System/templates/login.html
@@ -33,7 +33,7 @@
                     <input type="password" id="password" name="password" placeholder="Enter your password">
                     <div class="error-message" id="passwordError"></div>
                 </div><br>
-                <button type="submit">log in</button><br>
+                <button type="submit">log in</button><br><br>
                 
                 {% if messages %}
                 <div class="error-message" id="formError">
