--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -220,7 +220,7 @@
             <li><b><a href="{% url 'addproducts' %}">Add Products</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'editproduct' %}">Actions on Products</a></b></li>
+            <li><b><a href="{% url 'editproduct' %}">All Products List</a></b></li>
         </div>
         <div class="nav-item">
             <li>
@@ -243,7 +243,6 @@
             <h3>{{ product.product_name }}</h3>
             <p>{{ product.product_description }}</p><br>
             <p><strong>Quantity:</strong> {{ product.product_quantity }} {{ product.quantity_unit }}</p>
-            <p><strong>Price:</strong> Rs. {{ product.product_price }}</p>
             <p><strong>Status:</strong> {{ product.status|yesno:"Available,Not Available" }}</p>
             <p><strong>Added by:</strong> {{ product.employee.username }}</p>
             <p><strong>Added at:</strong> {{ product.added_at }}</p>
