--- a/Dairy_Care_System/templates/reguserlist.html
+++ b/Dairy_Care_System/templates/reguserlist.html
@@ -40,7 +40,6 @@
     </div>
 </ul>
 
-
 <div class="container">
     <h1>{{ role|title }} List</h1>
     <table>
@@ -69,9 +68,9 @@
                         <td>{{ user.updated_at }}</td>
                         <td class="action-btns">
                             <div class="button-group">
-                                <a href="{% url 'regdeleteuser' user.user_id %}" class="delete-btn" onclick="return confirm('Are you sure you want to delete this user?');"><b>Delete</b></a>
+                                <a href="#" class="delete-btn" onclick="openModal('delete', '{{ user.username }}', '{% url 'regdeleteuser' user.user_id %}');"><b>Delete</b></a>
                                 {% if not user.status %}
-                                    <a href="{% url 'restoreuser' user.user_id %}" class="view-btn" onclick="return confirm('Are you sure you want to restore this user?');"><b>Restore</b></a>
+                                    <a href="#" class="view-btn" onclick="openModal('restore', '{{ user.username }}', '{% url 'restoreuser' user.user_id %}');"><b>Restore</b></a>
                                 {% else %}
                                     <span>Active</span>
                                 {% endif %}
@@ -83,6 +82,53 @@
         </tbody>
     </table>
 </div>
+
+<!-- Modal Container -->
+<div id="confirmationModal" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">Dairy Care System</div>
+        <div class="modal-body" id="modal-message"></div>
+        <div class="modal-footer">
+            <button class="btn-confirm" id="confirm-btn">Confirm</button>
+            <button class="btn-cancel" onclick="closeModal();">Cancel</button>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    // Function to open the modal with the corresponding message
+    function openModal(actionType, username, url) {
+        var modal = document.getElementById("confirmationModal");
+        var message = document.getElementById("modal-message");
+        var confirmBtn = document.getElementById("confirm-btn");
+
+        if (actionType === 'delete') {
+            message.innerHTML = "Are you sure you want to delete the user <strong>" + username + "</strong> and deactivate their account?";
+        } else if (actionType === 'restore') {
+            message.innerHTML = "Are you sure you want to restore the user <strong>" + username + "</strong> and reactivate their account?";
+        }
+
+        // Set the confirm button to redirect to the action's URL
+        confirmBtn.onclick = function() {
+            window.location.href = url;
+        };
+
+        modal.style.display = "block";
+    }
+
+    // Function to close the modal
+    function closeModal() {
+        document.getElementById("confirmationModal").style.display = "none";
+    }
+
+    // Close modal when clicking outside
+    window.onclick = function(event) {
+        var modal = document.getElementById("confirmationModal");
+        if (event.target == modal) {
+            closeModal();
+        }
+    }
+</script>
 
 </body>
 </html>
